--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1805,6 +1805,7 @@ window.onpageshow = function(e){
         <li><a class="sheet__item" href="/settings"><span class="left"><span class="ic ic--settings"></span><span class="label">Settings</span></span><i class="bi bi-chevron-right chev"></i></a></li>
         <li><a class="sheet__item" href="/support/my"><span class="left"><span class="ic ic--cc"></span><span class="label">My Tickets</span></span><i class="bi bi-chevron-right chev"></i></a></li>
         <li><a class="sheet__item" href="/support/new"><span class="left"><span class="ic ic--support"></span><span class="label">Contact Support</span></span><i class="bi bi-chevron-right chev"></i></a></li>
+        <li><a class="sheet__item" href="/about_full"><span class="left"><span class="ic ic--profile"></span><span class="label">About</span></span><i class="bi bi-chevron-right chev"></i></a></li>
         <li><a class="sheet__item text-danger" href="/logout"><span class="left"><span class="ic ic--logout"></span><span class="label">Logout</span></span><i class="bi bi-chevron-right chev"></i></a></li>
       </ul>
     </div>
