--- a/app/templates/about_full.html
+++ b/app/templates/about_full.html
@@ -791,7 +791,7 @@ body.has-tabbar {
         </p>
         <div class="cta-row">
           <a class="btn primary" href="/items">Explorer les annonces <span class="mini">Now</span></a>
-          <a class="btn success" href="/items/new">Publier un objet <span class="mini">Fast</span></a>
+          <a class="btn success" href="/how-it-works">How it works <span class="mini">Guide</span></a>
           <a class="btn" href="/register">Créer un compte <span class="mini">Free</span></a>
         </div>
       </div>
