--- a/app/templates/how_it_works_steps.html
+++ b/app/templates/how_it_works_steps.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set immersive = true %}
 {% block content %}
 
 <style>
@@ -140,14 +141,6 @@
    (no base.html changes)
 ================================ */
 
-/* Top navbar / header */
-header,
-.topbar,
-.navbar,
-.main-navbar,
-.site-header {
-  display: none !important;
-}
 
 /* Search bar */
 .search,
