--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -972,7 +972,7 @@ window.onpageshow = function(e){
   class="{% if show_tabbar and not immersive and not no_ui %}has-tabbar{% endif %}">
   <!-- Global Page Loader -->
 <div id="sv-page-loader" class="sv-page-loader hidden">
-  <<div id="sv-lottie-loader" style="width:140px; height:140px;"></div>
+  <div id="sv-lottie-loader" style="width:140px; height:140px;"></div>
 </div>
 
 
