--- a/app/templates/about_full.html
+++ b/app/templates/about_full.html
@@ -417,17 +417,19 @@ body.has-tabbar {
       <div class="hero-grid">
 
        <div class="hero-cta" style="margin-top:12px;">
+
+        <a class="btn" href="/static/Explication%20d%C3%A9taill%C3%A9e%20du%20positionnement%20de%20Sevor.pdf" target="_blank" rel="noopener">
+    Présentation complète de Sevor — Louer tout, simplement <span class="mini">PDF</span>
+  </a>
+  <a class="btn" href="/static/Sevor%20(2).pdf" target="_blank" rel="noopener">
+   Sevor — Une vision moderne de la location <span class="mini">PDF</span>
+  </a> 
+  
   <a class="btn" href="/static/Comment%20utiliser%20le%20site%20Sevor.pdf" target="_blank" rel="noopener">
     Comment utiliser le site Sevor <span class="mini">PDF</span>
   </a>
 
-  <a class="btn" href="/static/Explication%20d%C3%A9taill%C3%A9e%20du%20positionnement%20de%20Sevor.pdf" target="_blank" rel="noopener">
-    Positionnement de Sevor <span class="mini">PDF</span>
-  </a>
 
-  <a class="btn" href="/static/Sevor%20(2).pdf" target="_blank" rel="noopener">
-    Sevor (2) <span class="mini">PDF</span>
-  </a>
 
   <a class="btn" href="/static/Une%20brochure%20de%20pr%C3%A9sentation%20de%20Sevor.pdf" target="_blank" rel="noopener">
     Brochure de présentation <span class="mini">PDF</span>
